Set overflow y from scroll to auto to avoid unnecessary scrollbar on About page

--- a/src/styles/Page.module.css
+++ b/src/styles/Page.module.css
@@ -15,7 +15,7 @@
   transform: translate(-50%,-50%);
 }
 
-.centerText {
+.centerContent {
   position: absolute;
 
   top: 10%;
@@ -25,12 +25,12 @@
 
   text-align: center;
   line-height: 2.2;
-  overflow-y: scroll;
+  overflow-y: auto;
   background-color: rgba(0,0,0,.5);
   border-radius: 1rem ;
 }
 
-.centerText p {
+.centerContent p {
   font-size: 1.25rem;
 }
 
